    - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
    - Broadcom Tigon3 support
    - USB Keyspan USA-xxx Serial Driver
    - Korg 1212 IO
    - ESS Allegro/Maestro3
    - Yamaha YMF724/740/744/754
  * Disable now broken drivers:
    - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
    - Broadcom Tigon3 support
    - USB Keyspan USA-xxx Serial Driver

  [ Aurelien Jarno ]
  * [mips, mipsel] Add a 64-bit image (5kc-malta) for the MIPS Malta board.
    (closes: #435677)

  [ Frederik Schüler ]
  * Move all PATA options into the global config file, exept PATA_ARTOP
    (arm/ixp4xx) and PATA_MPC52xx (powerpc).
  * Move new global options into the global config file
  * Clean up new amd64 options

 -- Bastian Blank <waldi@debian.org>  Sat, 15 Sep 2007 21:25:41 +0200

linux-2.6 (2.6.22-5) UNRELEASED; urgency=low

  [ maximilian attems ]
  * Add stable release 2.6.22.6 (minus 2 abi breaker):
    - USB: allow retry on descriptor fetch errors
    - PCI: lets kill the 'PCI hidden behind bridge' message
    - Netfilter: Missing Kbuild entry for netfilter
    - Fix soft-fp underflow handling.
    - SPARC64: Fix sparc64 task stack traces.
    - DCCP: Fix DCCP GFP_KERNEL allocation in atomic context
    - SNAP: Fix SNAP protocol header accesses.
    - NET: Fix missing rcu unlock in __sock_create()
    - IPv6: Invalid semicolon after if statement
    - TCP: Fix TCP rate-halving on bidirectional flows.
    - TCP: Fix TCP handling of SACK in bidirectional flows.
    - uml: fix previous request size limit fix
    - usb: add PRODUCT, TYPE to usb-interface events
    - PPP: Fix PPP buffer sizing.
    - ocfs2: Fix bad source start calculation during kernel writes
    - signalfd: fix interaction with posix-timers
    - signalfd: make it group-wide, fix posix-timers scheduling
    - USB: fix DoS in pwc USB video driver
    - sky2: don't clear phy power bits
    - PCI: disable MSI on RS690
    - PCI: disable MSI on RD580
    - PCI: disable MSI on RX790