@@ -1,7 +1,6 @@
-Package: linux-headers-@upstreamversion@@abiname@@localversion_headers@
+Package: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@
 Section: devel
 Priority: optional
-Provides: linux-headers, linux-headers-@major@
 Description: Common header files for Linux @upstreamversion@
  This package provides the architecture-specific common kernel header files
  for Linux kernel version @upstreamversion@, generally used for building out-of-tree
