@@ -1,7 +1,7 @@
 Package: linux-headers-@upstreamversion@@abiname@@localversion@
 Section: devel
 Priority: optional
-Depends: linux-headers-@upstreamversion@@abiname@@localversion_headers@ (= ${Source-Version}), linux-kbuild-@version@
+Depends: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@ (= ${Source-Version}), linux-kbuild-@version@
 Provides: linux-headers, linux-headers-@major@
 Description: Header files for Linux @upstreamversion@ on @class@
  This package provides the architecture-specific kernel header files
