@@ -52,6 +52,8 @@ linux-2.6 (2.6.23~rc5-1~experimental.1) UNRELEASED; urgency=low
     - Alteon AceNIC/3Com 3C985/NetGear GA620 Gigabit support
     - Broadcom Tigon3 support
     - USB Keyspan USA-xxx Serial Driver
+  * Add -common to common header package names.
+  * Drop provides from common header packages.
 
   [ Aurelien Jarno ]
   * [mips, mipsel] Add a 64-bit image (5kc-malta) for the MIPS Malta board.
@@ -63,7 +65,7 @@ linux-2.6 (2.6.23~rc5-1~experimental.1) UNRELEASED; urgency=low
   * Move new global options into the global config file
   * Clean up new amd64 options
 
- -- Bastian Blank <waldi@debian.org>  Sat, 15 Sep 2007 21:25:41 +0200
+ -- Bastian Blank <waldi@debian.org>  Wed, 26 Sep 2007 21:09:13 +0200
 
 linux-2.6 (2.6.22-5) UNRELEASED; urgency=low
 
